<resources>
    <string name="app_name">JobLesson2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_data_films">Нет данных по фильмам</string>
    <string name="film_name">Название фильма</string>
    <string name="film_description_">Описание фильма</string>
    <string name="dateRelise">Дата выхода на экраны</string>
    <string name="FilmName">Звёздные войны. Последний джедай.</string>
    <string name="filmLong">Продолжительность</string>
    <string name="gener">Жанр</string>
    <string name="pagesStatus">Загружена страница 1 из 500</string>
    <string name="buttonLoadElse">Дальше</string>
    <string name="pageLoading">"Cтраница %s из %s "</string>
    <string name="buttonLoadBefore">Ближе</string>
    <string name="buttonLoadBack">В начало</string>
    <string name="actors_name">Имя актёра</string>
    <string name="actors_character_">Персонаж</string>
</resources>