<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:id="@+id/scrollView">

<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/progressBarDetails"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/film_description_"
        android:textColor="?colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_film_details"
        tools:text="@string/film_description_" />

    <ImageView
        android:id="@+id/iv_film_details"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lake" />

    <ImageView
        android:id="@+id/ivPosterDetail"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail_description"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/run"/>


    <TextView
        android:id="@+id/textViewTitleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FilmName"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_detail_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dateRelise"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/runtimeDetail"
        app:layout_constraintStart_toEndOf="@+id/ivPosterDetail" />

    <TextView
        android:id="@+id/runtimeDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/filmLong"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/genresDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_release" />

    <TextView
        android:id="@+id/genresDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/gener"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_film_details"
        app:layout_constraintStart_toStartOf="@+id/runtimeDetail" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_actors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".view.main.MainActivity" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>